--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 ---
-<app-bar items="['projects','blog','resume']" social="['fa-facebook','fa-twitter','fa-google-plus']" itemPos="right">
+<app-bar items="['projects','blog','resume']" social="['fa-facebook','fa-twitter','fa-google-plus']" itemPos="right" color="#fff">
 </app-bar>  
 <div class="" id="parallax-maybe">
   <div class="contentpane parallax-group" id="top-pane">
