--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ layout: base
   <div class="contentpane parallax-group" id="top-pane">
     <div class="transparentBG parallax-layer parallax-back"></div>
     <div class="v-cent lato whiteText parallax-layer parallax-base" id="welcome">
-      <div class="h2">fickle pickle</div>
-      <div class="h4" id="pane1-text">a site by matt bow</div>
+      <div class="h2">matt bow</div>
+      <div class="h4" id="pane1-text">developer, tinkerer</div>
     </div>
   </div>
 
