--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ layout: base
   <div class="contentpane full-height" id="work-section">
     <div class="col-sm-4 full-height work-pane" id="work-dev">
       <div class="dark-grad"></div>
+      <a href="#" class="transparent-link"></a>
       <flip-label>
         <div class="title">dev</div>
         <div class="descript">web development projects</div>
@@ -37,16 +38,18 @@ layout: base
     </div>
     <div class="col-sm-4 full-height work-pane" id="work-photo">
       <div class="dark-grad"></div>
+      <a href="https://www.tumblr.com/blog/mattbow" class="transparent-link"></a>
       <flip-label>
         <div class="title">photo</div>
-        <div class="descript">amateur photos of people and places I love</div>
+        <div class="descript">photos of people and places I love</div>
       </flip-label>
     </div>
     <div class="col-sm-4 full-height work-pane" id="work-vid">
       <div class="dark-grad"></div>
+      <a href="https://vimeo.com/mattbow/videos" class="transparent-link"></a>
       <flip-label>
         <div class="title">vid</div>
-        <div class="descript">no budget short documentary style film projects</div>
+        <div class="descript">no budget, documentary-style short films</div>
       </flip-label>
     </div>
   </div>
