particle js and first pane redesign

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@ layout: base
 </app-bar>  
 <div class="" id="parallax-maybe">
   <div class="contentpane parallax-group" id="top-pane">
-    <div class="transparentBG parallax-layer parallax-back"></div>
+    <div class="transparentBG parallax-layer parallax-back">
+      <div id="particles-js"></div>
+    </div>
     <div class="v-cent lato whiteText parallax-layer parallax-base" id="welcome">
-      <div class="h2">matt bow</div>
-      <div class="h4" id="pane1-text">developer, tinkerer</div>
+      <div class="h2 blog-grey">matt bow</div>
+      <div class="h4 blog-l-grey" id="pane1-text">developer, tinkerer</div>
     </div>
   </div>
 
