--- a/projects/via/index.html
+++ b/projects/via/index.html
@@ -1,18 +1,4 @@
-import React from 'react';
-import {render} from 'react-dom';
-import { browserHistory, Router, createRoutes } from 'react-router';
-import routes from '../pages/routes';
-
-if (typeof document !== 'undefined') {
-  render(<Router onUpdate={() => window.scrollTo(0, 0)}
-                  history={browserHistory}
-                  routes={routes} />, document.getElementById('root'));
-}
-
-// Exported static site renderer:
-module.exports = function renderPage(locals, callback) {
-  callback(null,
-`---
+---
 layout: base
 ---
 <div id="root">
@@ -32,6 +18,4 @@ layout: base
   <script src="http://localhost:5000/static/main.bundle.js"></script>
 {% else %}
   <script src="/dist/app.bundle.js"></script>
-{% endif %}`
-  );
-};
+{% endif %}
