site addition for devtalk

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ layout: base
     <div class="sk-cube sk-cube8"></div>
     <div class="sk-cube sk-cube9"></div>
   </div>
+  <div style="margin:2em 0; text-align:center;">
+    loading...
+  </div>
 </div>
 {% if jekyll.environment == 'development' %}
   <script src="http://localhost:5000/static/main.bundle.js"></script>
